Closed
Bug 695240
Opened 14 years ago
Closed 14 years ago
Vorbis playback is broken on Android
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla10
People
(Reporter: kinetik, Assigned: kinetik)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
465 bytes,
patch
|
derf
:
review+
rillian
:
review+
|
Details | Diff | Splinter Review |
While debugging Android audio problems, my test file plays back with corrupt/invalid audio samples after updating my tree. Bisecting the breakage revealed that bug 677581 regressed playback of Vorbis on Android.
Assignee | ||
Comment 1•14 years ago
|
||
Tim pointed out that the new config_types.h had an incorrect definition of ogg_int64_t. I've confirmed that fixing that solves the regression.
Updated•14 years ago
|
Attachment #567644 -
Flags: review?(tterribe) → review+
Comment 2•14 years ago
|
||
Comment on attachment 567644 [details] [diff] [review]
patch v0
This should be fine. long long will be 64 bits on both 32 and 64 bit systems.
Sorry for the breakage; this checked-in-config-types thing is a real hack.
Attachment #567644 -
Flags: review+
Assignee | ||
Comment 3•14 years ago
|
||
Target Milestone: --- → mozilla10
Comment 4•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•