Bug 695240 - ogg_int64_t should be 64-bit everywhere.  r=derf r=rillian