media/libogg/include/ogg/config_types.h
@@ -20,6 +20,6 @@ typedef short ogg_int16_t;
 typedef unsigned short ogg_uint16_t;
 typedef int ogg_int32_t;
 typedef unsigned int ogg_uint32_t;
-typedef long ogg_int64_t;
+typedef long long ogg_int64_t;
 
 #endif
